--- a/analyze-real.ipynb
+++ b/analyze-real.ipynb
@@ -11,10 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import torch, time, sys\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -28,14 +29,17 @@
     "from data import get_dataset, hamiltonian_fn, dynamics_fn\n",
     "from nn_models import MLP\n",
     "from hnn import HNN\n",
-    "from utils import L2_loss"
+    "from utils import L2_loss\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Set some notebook constants"
+    "\n",
+    "## Set some notebook constants\n",
+    "\n"
    ]
   },
   {
@@ -513,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
